Refactor workflows
